# EmbeddedProject

./: .gitignore  CMakeLists.txt  Makefile
sources/: failure.c  failure.h  getFailureFromJson.c  getFailureFromJson.h  getFormattedDate.c  getFormattedDate.h  getPlaneFromJson.c  getPlaneFromJson.h  hex2dec.c  hex2dec.h  plane.c  plane.h  printInLogFile.c  raiseError.c  raiseError.h  randomError.c  randomError.h  readComponentFromValue.c  readComponentFromValue.h  readCountryFromPlaneCode.c  readCountryFromPlaneCode.h  readFailureFromValue.c  readFailureFromValue.h  readTypePlaneFromValue.c  readTypePlaneFromValue.h  strSplit.c  strSplit.h
sources/include/: failure.h  getFormattedDate.h  plane.h  printInLogFile.h  readComponentFromValue.h  readCountryFromPlaneCode.h  readFailureFromValue.h  readTypePlaneFromValue.h
sources/src/: failure.c  getFormattedDate.c  hex2dec.c  plane.c  printInLogFile.c  raiseError.c  readComponentFromValue.c  readCountryFromPlaneCode.c  readFailureFromValue.c  readTypePlaneFromValue.c
tests/: testReadComponentFromValue.c
tests/testReads/: testReadComponentFromValue.c
